# guidebot-recorder

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/en/: cli-reference.md  compiling-agents.md  getting-started.md  how-it-works.md  index.md  localized-render-sets.md  multilingual-audio.md  pdf-guide.md  scenario-files.md  scenario-reference.md  troubleshooting.md
docs/pl/: cli-reference.md  compiling-agents.md  getting-started.md  how-it-works.md  index.md  localized-render-sets.md  multilingual-audio.md  pdf-guide.md  scenario-files.md  scenario-reference.md  troubleshooting.md
docs/superpowers/: 2026-07-15-video-polish-HANDOFF.md
examples/: localized-login.en-US.scenario.yaml  localized-login.pl-PL.scenario.yaml  localized-login.render-set.yaml  logged-in-tour.scenario.yaml  login.scenario.yaml  multilingual-login.scenario.yaml  onet-login.scenario.yaml  teach-login.scenario.yaml
examples/newwindow/: inbox.html  launcher.html  newwindow.scenario.yaml
guidebot_recorder/: cli.py  diagnostics.py  languages.py
guidebot_recorder/chrome/: __init__.py  chrome.js  chrome.py  framing.py  shell.js  typing.py
guidebot_recorder/desktop/: __init__.py  desktop.js  desktop.py
guidebot_recorder/guide/: annotate.py  capture.py  geometry.py  guide.py  layout.py  model.py  pdf.py  prolog.py  replay.py  stills.py  trail.py
guidebot_recorder/models/: __init__.py  action.py  compiled.py  config.py  identity.py  render_set.py  scenario.py  target.py
guidebot_recorder/overlay/: __init__.py  cursor.js  geometry.py  overlay.py
guidebot_recorder/recorder/: __init__.py  _debug.py  compile.py  recorder.py  render.py  render_set.py  session.py
guidebot_recorder/resolver/: __init__.py  identity_capture.py  page_context.py  positional.py  reasoner.py  resolution.py  validate.py  widget.py
guidebot_recorder/scenario/: __init__.py  compiled.py  env.py  loader.py  render_set.py  roundtrip.py  source.py
guidebot_recorder/selects/: __init__.py  selects.js  selects.py  visibility.js  visibility.py
guidebot_recorder/sfx/: README.md
guidebot_recorder/slide/: __init__.py  slide.js  slide.py
guidebot_recorder/tts/: __init__.py  base.py  edge.py
guidebot_recorder/video/: __init__.py  audiobed.py  mux.py  sfx.py  timeline.py
scripts/: gen_sfx.py
tests/: _seam_guard.py  _seam_scan.py
tests/integration/: _popup_e2e.py  _selects_e2e.py  test_ambiguous_targets.py  test_compile_render.py  test_guide.py  test_guide_select_reveal.py  test_highlight.py  test_localized_render_set.py  test_optional_branch_compile_render.py  test_popup_compile_render.py  test_popup_compile_render_crop_fallback.py  test_selects_compile_render.py  test_selects_compile_render_legacy.py  test_selects_compile_render_popup.py  test_selects_compile_render_undriveable.py  test_session_healthcheck.py  test_session_replay.py  test_setup_wired_compile_render.py  test_shell_render.py  (+1 more)
(+256 files in other folders)
